--- a/AppFilesAlenka/UIMirror/app/src/main/res/values/strings.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/res/values/strings.xml
@@ -43,4 +43,6 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+    <string name="titel">Titel</string>
+    <string name="alarm_einstellen">alarm einstellen</string>
 </resources>
